-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Sharding
-
Fully Compatible
-
ALL
-
v5.0
-
Sharding EMEA 2021-07-26
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Shards retry ShardCannotRefreshDueToLocksHeld locally one single time after refreshing the catalog cache, but if on the retry it hits the same error (because the collection metadata was invalidated again after the refresh) then the ShardCannotRefreshDueToLocksHeld error is propagated to the router.
The router should retry on this error, but it doesn't because it isn't in this list of errors to be retried on write_op
- related to
-
SERVER-132641 Two jstests from SERVER-128128 are flaky on transient routing errors
-
- Closed
-