SERVER-58021 mongos should retry write upon getting ShardCannotRefreshDueToLocksHeld error from shard