src/mongo/s/write_ops/write_op.cpp
@@ -107,7 +107,8 @@ size_t WriteOp::getNumTargeted() {
 }
 
 static bool isRetryErrCode(int errCode) {
-    return errCode == ErrorCodes::StaleShardVersion || errCode == ErrorCodes::StaleDbVersion;
+    return errCode == ErrorCodes::StaleShardVersion || errCode == ErrorCodes::StaleDbVersion ||
+        errCode == ErrorCodes::ShardCannotRefreshDueToLocksHeld;
 }
 
 static bool errorsAllSame(const vector<ChildWriteOp const*>& errOps) {
